# mrclipper

./: ARCHITECTURE_ANALYSIS_REPORT.md  REFACTORING_OPPORTUNITIES.md
mrclipper/: .gitignore  CHANGELOG.md  PROJECT_STRUCTURE.txt  README.md  SETUP_COMPLETE.md  TODO.md  implementation_next_future.md  pyproject.toml
mrclipper/.github/workflows/: release.yml
mrclipper/config-examples/: config.toml.example
mrclipper/docs/: README.md  agent-setup.md  api.md  configuration.md  cron.md  examples.md  index.md  installation.md  troubleshooting.md  usage.md
mrclipper/mrclipper/: __init__.py  aspect.py  cli.py  clip.py  config.py  config_models.py  download.py  exceptions.py  highlights.py  logging_config.py  manifest.py  metadata.py  scene_detector.py  subtitles.py  utils.py  video.py
mrclipper/scripts/: create_test_video.py
mrclipper/skills/video-clipper/: README.md  SKILL.md  docs
mrclipper/skills/video-clipper/config/: job-tiktok.toml.example  job-youtube.toml.example
mrclipper/skills/video-clipper/scripts/: clip
mrclipper/tests/: __init__.py  conftest.py  test_cli_basic.py  test_cli_config_fix.py  test_config.py  test_highlights.py  test_video.py
mrclipper/tests/unit/: test_metadata.py  test_retry.py
