[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mrclipper"
version = "1.0.1"
description = "Advanced video clipper for OpenClaw"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Mr. Clipper", email = "mrclipper@localhost"}
]
dependencies = [
    "toml>=0.10.2",
    "pydantic>=2.0",
    "typer>=0.9",
]

[project.scripts]
mrclipper = "mrclipper.cli:app"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "RUF"]
ignore = []

[tool.mypy]
python_version = "3.10"
plugins = ["pydantic.mypy"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
no_implicit_optional = false
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "toml.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pre-commit>=3.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
    "black>=23.0",
]
